# zec-timing

./: .env  .env.example  .gitignore  API_Endpoints.md  Er-diagramm.md  Inhaltsverzeichnis.md  README.md  README_API.md  TODO  Todo.md  deployment.yaml  docker-compose.yml  ingres.yaml  kubernetes.yml  pseudo-mqtt.yml  send-time.sh  service.yaml
.github/workflows/: build_images.yml  ci.yaml  test.yml
DA_Vorlage_HTL-Weiz/: 00_Anleitungsfiles_sind_in_den_Ordnern.txt
DA_Vorlage_HTL-Weiz/00_LATdef/: DocSettings.tex  UsePackages.tex
DA_Vorlage_HTL-Weiz/02_DOC_Main/: DA_01_INTroduction.tex  DA_03_ADDendum.tex  DA_04_ACR.tex  DA_05_LIT.tex  DA_DiplomarbeitsName_Dok_main_0.aux  DA_DiplomarbeitsName_Dok_main_0.fdb_latexmk  (+3 more)
Web-App/: .gitignore  package-lock.json  package.json
backend/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
config/: mosquitto.conf~
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  tsconfig.json
mosquitto/: Dockerfile  docker-entrypoint.sh  mosquitto.conf
mqtt-worker/: Dockerfile  pyproject.toml
mqtt-worker/app/: main.py
mqtt-worker/app/api/: main.py
mqtt-worker/app/api/routes/: health_check.py  timestamp.py
mqtt-worker/app/config/: config.py
mqtt-worker/app/crud/: timestamps.py
mqtt-worker/app/exceptions/: mac_not_found.py
mqtt-worker/app/mqtt/: pull_timestamps.py
mqtt-worker/app/redis/: redis.py
mqtt-worker/app/schemas/: timestamp.py
mqtt-worker/app/tests/: conftest.py  test.sh
mqtt-worker/app/tests/mqtt/: mqtt_timestamp_test.py
zec_api/: docker-compose.yml
(+323 files in other folders)
