[project]
name = "app"
version = "2025.08.05"
description = ""
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "python-multipart<1.0.0,>=0.0.7",
    # is for retry function
    # https://tenacity.readthedocs.io/en/latest/
    "tenacity<9.0.0,>=8.2.3",
    "pydantic>2.0",
    "paho-mqtt==2.1.0",
    "httpx<1.0.0,>=0.25.1",
    "psycopg2==2.9.10",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pydantic-settings<3.0.0,>=2.2.1",
    # https://pypi.org/project/sentry-sdk
    "sentry-sdk==2.19.2",
    "requests<3.0.0,>=2.31.0",
    "redis==6.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "coverage<8.0.0,>=7.4.3",
]
